# $Date: 2016-11-09 15:06:33 +0100 (Mi, 09 Nov 2016) $
#***************************************************************************

todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system


##################################################################
opsi-winst/opsi-script (4.11.7.0) experimental; urgency=low

  * integration of new xml functions

-- Detlef Oertel <d.oertel@uib.de>  Tue, 04 May 2017:15:00:00 +0200


opsi-winst/opsi-script (4.11.6.12) stable; urgency=low

  * osjson: escape chars in jsonAsArrayToStringList
  * osparser: Logging at errorsOccurredSinceMark
  * osparser: move/rename/symlink/hardlink: no Syntax error on wrong parameters ; fixes #2036
  * some changes for 64 Bit Version

-- Detlef Oertel <d.oertel@uib.de>  Tue, 03 Jan 2017:15:00:00 +0200


opsi-winst/opsi-script (4.11.6.11) stable; urgency=low

  * source migrated from svn to git and direcories restructured
  * compiled with Lazarus 1.6.2
  * osparser: doOpsiServiceCall: new Parametzer opsiclientd-once (=tscOpsiclientdOnce)
     resets local_opsidata after servicecall
  * osparser: CreateAndProcessScript: resets local_opsidata before script
  * osparser: doAktionen: Statement: 'opsiservicecall /preloginservice' (without sektion) allowed
  * oswebservice: sendLog: shrinking temporary disabled until size can be asked via service call
  * osfuncwin: StrSIDToName: do not try empty string
  * osparser: use 'on e: exception do' in exception handling
  * osfuncwin2: updateenvironment: use lazarus sendmessage
  * osregistry: WriteEntry: unicode / utf8 Support
  * osparser: Resourcestring for translation: rsReadyToContinue
  * osparser: fileactionsmain: GetString with true
  * osfunc: TPatchList.FindFirstItemWith: more logging
  * osinteracticegui: message for not working logview
  * osparser: symlink: check via cmd.exe after create symlink
  * osparser: removed cmd.exe call from fileexists%