@@ -14,8 +14,7 @@
       <Icon Value="0"/>
     </General>
     <i18n>
-      <EnableI18N Value="True"/>
-      <OutDir Value="languages"/>
+      <OutDir Value="lang"/>
     </i18n>
     <VersionInfo>
       <UseVersionInfo Value="True"/>
