@@ -87,7 +87,7 @@ Controls,
 LCLIntf,
 Menus, Buttons, ComCtrls,
 LResources,
-lcltranslator,
+//lcltranslator,
 {$ENDIF GUI}
   osencoding,
   osconf,
@@ -2707,7 +2707,7 @@ begin
               ProgramMode := pmInfo;
               exit;
             end;
-            SetDefaultLang(r);
+//            SetDefaultLang(r);
             Inc(i);
           end
           else
@@ -2908,7 +2908,7 @@ initialization
   opsiserviceSessionId := '';
   {$IFDEF GUI}
   try
-    GetDefaultLang;
+//    GetDefaultLang;
   except
   end;
   {$ENDIF GUI}
